Fixed overflow for newsletter links
refs https://github.com/TryGhost/Team/issues/2067

--- a/ghost/admin/app/styles/layouts/content.css
+++ b/ghost/admin/app/styles/layouts/content.css
@@ -1002,6 +1002,7 @@ a.gh-post-list-signups.active:hover > span, a.gh-post-list-conversions.active:ho
     display: flex;
     align-items: center;
     padding-right: 32px;
+    overflow: hidden;
 }
 
 .gh-links-list-item a {
